--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.0.5</version>
-		<relativePath>./course/pom.xml</relativePath><!-- lookup parent from repository -->
+		<relativePath></relativePath><!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.javaspring</groupId>
 	<artifactId>course</artifactId>
@@ -28,6 +28,11 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
+			
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
